@@ -4877,10 +4877,9 @@ namespace libtorrent
 		// this call is only valid on torrents with metadata
 		if (!valid_metadata() || is_seed()) return;
 
-		TORRENT_ASSERT(index < m_torrent_file->num_files());
-		TORRENT_ASSERT(index >= 0);
 		if (index < 0 || index >= m_torrent_file->num_files()) return;
-
+		if (prio < 0) prio = 0;
+		else if (prio > 7) prio = 7;
 		if (m_file_priority.size() <= index)
 		{
 			// any unallocated slot is assumed to be 1
@@ -4899,8 +4898,6 @@ namespace libtorrent
 		// this call is only valid on torrents with metadata
 		if (!valid_metadata()) return 1;
 
-		TORRENT_ASSERT(index < m_torrent_file->num_files());
-		TORRENT_ASSERT(index >= 0);
 		if (index < 0 || index >= m_torrent_file->num_files()) return 0;
 
 		// any unallocated slot is assumed to be 1
