@@ -41,6 +41,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* add bootstrap.sh to generage configure script and run configure
+	* fix bug in SOCK5 UDP support
 	* fix issue where torrents added by URL would not be started immediately
 
 0.16.10 release
